<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showin="navigation_view">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_sort"
        android:title="@string/bottom_nav_categories" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/bottom_nav_cart" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/bottom_nav_account" />

</menu>
