<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:iconTint="@color/white"
        android:title="@string/cart"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_wish_list"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/wishlist"
        android:iconTint="@color/white"
        android:visible="true"
        app:showAsAction="always" />

</menu>